--- a/index.html
+++ b/index.html
@@ -70,26 +70,31 @@
     <audio data-key="76" src="src/audio/BOI1DA_percussion_15.wav"></audio>
 
     <script>
-      window.addEventListener("keydown", function (e) {
-        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-        const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-        if (!audio) return;
-        audio.currentTime = 0;
-        audio.play();
-        console.log(key);
-        key.classList.add("playing");
-        key.classList.remove("playng");
-        key.classList.toggle("playing");
-      });
+      {
+        function playSound(e) {
+          const audio = document.querySelector(
+            `audio[data-key="${e.keyCode}"]`
+          );
+          const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+          if (!audio) return;
+          audio.currentTime = 0;
+          audio.play();
+          console.log(key);
+          key.classList.add("playing");
+        }
 
-      function removeTransition(e) {
-        if (e.propertyName !== "transition") return;
+        function removeTransition(e) {
+          if (e.propertyName !== "transform") return;
+
+          this.classList.remove("playing");
+        }
+
+        const keys = document.querySelectorAll('.key');
+        keys.forEach((key) =>
+          key.addEventListener("transitionend", removeTransition)
+        );
+        window.addEventListener("keydown", playSound);
       }
-
-      const keys = document.querySelectorAll(".key");
-      keys.forEach((key) =>
-        key.addEventListener("transitionend", removeTransition)
-      );
     </script>
 
     <!-- <script src="app.js" async defer></script> -->
